# Projet

./: .gitignore  00.c  CMakeLists.txt  Makefile  README.md  a.out  algo  algo.cpp  algo.h  commande.txt  docker_command.txt  main.cpp  report_backup  res.txt  res_ieee.txt  test.cpp  testFailed_reasons.txt  test_value.py
Algos&Tests/: Makefile  test.cpp
Exponentiation/: Makefile  algo.c  main.c  run.sh
Exponentiation_etudes_mantisse/: SR_main.c  experience.c  ref_main.c  reference.c  run.sh  stat.c  stat_distribution.c  stat_sign_bit.c
Lorenz/: Makefile  lorenz  lorenz_32.c  lorenz_64.c  plot.gp  run.sh
Performance/: Makefile  exe.sh  kernels.c  main.c  pars.sh  tools.c  tools.h
Performance 1er_semestre/: kernels.c  kernels.h  main.c  pars.sh  tools.c  tools.h
Performance SR/: execution  performance.py  performance_1.py  performance_2.py  performance_3.py  performance_4.py  res  run.sh  test.py  traitement_donnees.py
Performance Verificarlo/: .run.sh.swp  algo.c  algo.h  main.c  results.txt  run.sh  script.py
PyTorch/: lorenz.py  test.py
Rapport/: rapport.txt  rapport_12_21_backup.txt  rapport_backup_new.txt
Sommation/: run.sh
Sum_prod/: Makefile  algo.h  calcul.c  main.c  plot_r.gp  ref.c  run_v.sh  run_y.sh  run_z.sh
algo_lib/: CMakeLists.txt  algo.cpp  algo.h
compare/: SR_d.sh  SR_e.sh  SR_f.sh  SR_s.sh  UR_d.sh  UR_e.sh  UR_f.sh  UR_s.sh  double.c  float.c  plot.gp  stat.c
exp_naif/: Makefile  build_SR.sh  build_UR.sh  build_arrondi_classique.sh  build_err.sh  build_reference.sh  erreur.c  evolution-erreur.gp  main.c  plot-SR-x-0-5.gp  (+17 more)
(+653 files in other folders)
